# shredder_admin

./: .gitignore  README.md
src/: admin-account.html  admin-dashboard.html  approved_shred_requests.html  denied_shred_requests.html  file-search-history.html  index.html  login.html  pending_shred_requests.html
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: auth_commands.rs  initialize_app.rs  lib.rs  main.rs  search_commands.rs  shred_commands.rs  user_commands.rs
src/assets/css/: portal.css
src/assets/js/: account.js  app.js  file-search.js  login.js  logout.js  session.js  shredder.js
