[package]
name = "file_shredder"
version = "0.0.6"
description = "SFS is a secure and efficient application built with Tauri. It allows users to permanently delete files from their system, ensuring that the data cannot be recovered."
authors = ["priest"]
edition = "2021"

[lib]
name = "file_shredder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4.10.0"
sha-1 = "0.10"
hex = "0.4"
tauri-plugin-shell = "2.0.0-beta.2"
tauri-plugin-notification = "2.0.0-beta.2"
postgres = "0.19"
tauri-plugin-fs = "2.0.0-beta.2"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
